# elo

./: .gitignore  2025_week1_predictions.json  COMPONENT_FIX_SUMMARY.md  COMPREHENSIVE_ROADMAP_2025.md  DASHBOARD_SECTIONS_SUMMARY.md  DASHBOARD_STARTUP_GUIDE.md  LIVE_GAME_TRACKING_DOCUMENTATION.md  LIVE_NFL_DATA_INTEGRATION.md  MULTI_SPORT_IMPLEMENTATION_SUMMARY.md  MULTI_SPORT_NAVIGATION_DESIGN.md  PREDICTION_ANALYTICS_DOCUMENTATION.md  PROJECT_RULES_AND_FINDINGS.md  PROJECT_SCOPE_NOTES.md  UNIFIED_DATABASE_PLAN.md  action_network_integration.py  advanced_nfl_scraper.py  analyze_elo_accuracy.py  api_performance_optimizer.py  api_server.py  automated_data_collector.py  automated_weekly_elo_updater.py  backtest_predictions_20250905_194553.csv  calculate_comprehensive_elo_ratings.py  calculate_elo_with_weekly_changes.py  calculate_proper_elo_ratings.py  check_missed_jobs.py  comprehensive_backtest_predictions_20250905_194658.csv  corrected_accuracy_test.py  create_unified_database.py  database_migration.py  database_optimization.py  database_performance_analysis.py  database_schema_design.md  display_2025_predictions.py  elo_accuracy_report.py  elo_projection_service.py  enhanced_api_server.py  enhanced_backtest_results_20250904_143406.json  enhanced_backtest_results_20250904_144816.json  enhanced_backtest_results_20250904_152852.json  (+47 more)
configs/: 2025_ready.json  automated_collection.json  default.json  high_k.json  injury_optimized.json  production.json  qb_enabled.json  travel_enabled.json  weather_enabled.json
dashboard/: .babelrc  SCHEDULE_FEATURE_DOCUMENTATION.md  (+6 more)
(+253 files in other folders)
