[tool.poetry]
name = "sports-edge"
version = "0.1.0"
description = "NFL Elo rating system with advanced features and backtesting"
authors = ["Tim <tim@example.com>"]
readme = "README.md"
packages = [{include = "ingest"}, {include = "models"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0,<2.0.0"
numpy = "^1.24.0"
pydantic = "^2.0.0"
typer = "^0.9.0"
rich = "^13.0.0"
scikit-learn = "^1.3.0"
nfl-data-py = "^0.3.3"
meteostat = "^1.6.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.5.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
